feat: enhance ImageGenerator with image editing and new prompt-based generation
- Add `generateImage` method for creating images from prompts
- Add `editImage` method for editing existing images with new prompts
- Refactor shared logic into `saveImage` utility method for reusable image saving